[gd_scene load_steps=4 format=3 uid="uid://b6ivo3owl03xo"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_i3m0e"]
[ext_resource type="PackedScene" uid="uid://d38pudw2xfoii" path="res://scenes/player.tscn" id="2_op6u2"]

[sub_resource type="Curve2D" id="Curve2D_lxsy1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 472, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 8)
}
point_count = 6

[node name="main" type="Node2D"]
script = ExtResource("1_i3m0e")

[node name="player" parent="." instance=ExtResource("2_op6u2")]
collision_mask = 2

[node name="bugtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoretimer" type="Timer" parent="."]

[node name="startimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startposition" type="Marker2D" parent="."]
position = Vector2(240, 360)

[node name="bugPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lxsy1")

[node name="bugpathlocation" type="PathFollow2D" parent="bugPath"]
position = Vector2(0, -3)
rotation = 1.5708

[connection signal="timeout" from="bugtimer" to="player" method="_on_bugtimer_timeout"]
[connection signal="timeout" from="scoretimer" to="player" method="_on_scoretimer_timeout"]
[connection signal="timeout" from="startimer" to="player" method="_on_startimer_timeout"]
